[package]
description = "Privacy-preserving vote protocol built on the Orchard shielded transaction protocol"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "orchard-vote"
version = "0.1.0"

[dependencies]
blake2b_simd = {version = "1", default-features = false}
byteorder = "1"
ff = {version = "0.13", default-features = false}
group = "0.13"
halo2_gadgets = {version = "0.4", default-features = false}
halo2_proofs = {version = "0.3", default-features = false, features = ["batch", "floor-planner-v1-legacy-pdqsort"]}
hex = {version = "0.4", default-features = false, features = ["alloc", "serde"]}
incrementalmerkletree = "0.8.2"
pasta_curves = "0.5"
rand = {version = "0.8", default-features = false}
serde = {version = "1.0", default-features = false, features = ["derive"]}
subtle = {version = "2.6", default-features = false}
thiserror = "1.0"
tracing = {version = "0.1", default-features = false}
zcash_encoding = "0.4"
zcash_note_encryption = "0.4"

[dependencies.orchard]
git = "https://github.com/hhanh00/orchard"
rev = "f0c6280e188de01b14da6991d8fba7eb946b5b38"
features = ["circuit", "unstable-voting-circuits"]

[features]
default = ["multicore", "std"]
multicore = ["halo2_proofs/multicore"]
std = ["orchard/std"]
